add_sources(
	Activity.h
	Activity.cpp
	CAGrunt.h
	CAGrunt.cpp
	CApache.h
	CApache.cpp
	CApacheHVR.h
	CApacheHVR.cpp
	CBabyCrab.h
	CBabyCrab.cpp
	CBarnacle.h
	CBarnacle.cpp
	CBarney.h
	CBarney.cpp
	CBaseMonster.ai.cpp
	CBaseMonster.combat.cpp
	CBaseMonster.h
	CBaseMonster.schedule.cpp
	CBaseMonster.scripted.cpp
	CBaseMonster.state.cpp
	CBaseTurret.h
	CBaseTurret.cpp
	CBigMomma.h
	CBigMomma.cpp
	CBloater.h
	CBloater.cpp
	CBMortar.h
	CBMortar.cpp
	CBullsquid.h
	CBullsquid.cpp
	CController.h
	CController.cpp
	CControllerHeadBall.h
	CControllerHeadBall.cpp
	CControllerZapBall.h
	CControllerZapBall.cpp
	CDeadBarney.h
	CDeadBarney.cpp
	CDeadHGrunt.h
	CDeadHGrunt.cpp
	CDeadScientist.h
	CDeadScientist.cpp
	CFlockingFlyer.h
	CFlockingFlyer.cpp
	CFlockingFlyerFlock.h
	CFlockingFlyerFlock.cpp
	CFlyingMonster.h
	CFlyingMonster.cpp
	CFurniture.h
	CFurniture.cpp
	CGargantua.h
	CGargantua.cpp
	CGenericMonster.h
	CGenericMonster.cpp
	CGMan.h
	CGMan.cpp
	CHAssassin.h
	CHAssassin.cpp
	CHeadCrab.h
	CHeadCrab.cpp
	CHGrunt.h
	CHGrunt.cpp
	CHGruntRepel.h
	CHGruntRepel.cpp
	CHornet.h
	CHornet.cpp
	CHoundeye.h
	CHoundeye.cpp
	CIchthyosaur.h
	CIchthyosaur.cpp
	CInfoBM.h
	CInfoBM.cpp
	CISlave.h
	CISlave.cpp
	CLeech.h
	CLeech.cpp
	CMiniTurret.h
	CMiniTurret.cpp
	CMonsterMaker.h
	CMonsterMaker.cpp
	CNihilanth.h
	CNihilanth.cpp
	CNihilanthHVR.h
	CNihilanthHVR.cpp
	COsprey.h
	COsprey.cpp
	CPenguinGrenade.h
	CPenguinGrenade.cpp
	CRat.h
	CRat.cpp
	CRoach.h
	CRoach.cpp
	CScientist.h
	CScientist.cpp
	CSentry.h
	CSentry.cpp
	CSittingScientist.h
	CSittingScientist.cpp
	CSquadMonster.h
	CSquadMonster.cpp
	CSquidSpit.h
	CSquidSpit.cpp
	CStomp.h
	CStomp.cpp
	CTalkMonster.h
	CTalkMonster.cpp
	CTentacle.h
	CTentacle.cpp
	CTentacleMaw.h
	CTentacleMaw.cpp
	CTurret.h
	CTurret.cpp
	CZombie.h
	CZombie.cpp
	DefaultAI.h
	DefaultAI.cpp
	Monsters.h
	Monsters.cpp
	Schedule.h
)

add_subdirectory( scripted )